# notion-autocalendar

./: .gitignore  Dockerfile  README.md  constants.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: actions.yml
notion-autocalendar/: pyvenv.cfg
notion-autocalendar/Scripts/: activate  activate.bat
